--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -216,6 +216,7 @@
     <sys:String x:Key="Text.FileCM.DiscardMulti">放弃 {0} 个文件的更改...</sys:String>
     <sys:String x:Key="Text.FileCM.StashMulti">贮藏选中的 {0} 个文件...</sys:String>
     <sys:String x:Key="Text.FileCM.SaveAsPatch">另存为补丁...</sys:String>
+    <sys:String x:Key="Text.FileCM.AssumeUnchanged">不跟踪此文件的更改</sys:String>
 
     <sys:String x:Key="Text.DeleteBranch">确定要删除此分支吗？</sys:String>
     <sys:String x:Key="Text.DeleteBranch.Branch">分支名 ：</sys:String>
@@ -393,6 +394,7 @@
 
     <sys:String x:Key="Text.WorkingCopy">本地更改</sys:String>
     <sys:String x:Key="Text.WorkingCopy.Unstaged">未暂存</sys:String>
+    <sys:String x:Key="Text.WorkingCopy.Unstaged.ViewAssumeUnchaged">查看忽略变更文件</sys:String>
     <sys:String x:Key="Text.WorkingCopy.Unstaged.Stage">暂存选中</sys:String>
     <sys:String x:Key="Text.WorkingCopy.Unstaged.StageAll">暂存所有</sys:String>
     <sys:String x:Key="Text.WorkingCopy.Staged">已暂存</sys:String>
@@ -475,6 +477,10 @@
     <sys:String x:Key="Text.Statistics.TotalCommitsCount">总计提交次数：{0}</sys:String>
     <sys:String x:Key="Text.Statistics.CommitterName">提交者</sys:String>
     <sys:String x:Key="Text.Statistics.CommitAmount">提交次数</sys:String>
+
+    <sys:String x:Key="Text.AssumeUnchanged">不跟踪更改的文件</sys:String>
+    <sys:String x:Key="Text.AssumeUnchanged.Remove">移除</sys:String>
+    <sys:String x:Key="Text.AssumeUnchanged.Empty">没有不跟踪更改的文件</sys:String>
 
     <sys:String x:Key="Text.Weekday.0">星期日</sys:String>
     <sys:String x:Key="Text.Weekday.1">星期一</sys:String>
