--- a/src/Views/Widgets/WorkingCopy.xaml
+++ b/src/Views/Widgets/WorkingCopy.xaml
@@ -41,6 +41,7 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
                     <controls:ChangeDisplaySwitcher
@@ -61,8 +62,15 @@
                         x:Name="iconStaging"
                         IsAnimating="{Binding ElementName=unstagedContainer, Path=IsStaging}"
                         Visibility="{Binding ElementName=unstagedContainer, Path=IsStaging, Converter={StaticResource BoolToCollapsed}}"/>
-                    <ToggleButton
+                    <controls:IconButton
                         Grid.Column="4"
+                        Click="ViewAssumeUnchanged"
+                        Width="14" Height="14"
+                        Margin="4,0"
+                        Icon="{StaticResource Icon.Ignores}"
+                        ToolTip="{DynamicResource Text.WorkingCopy.Unstaged.ViewAssumeUnchaged}"/>
+                    <ToggleButton
+                        Grid.Column="5"
                         Width="14" Height="14"
                         Margin="4,0"
                         Style="{StaticResource Style.ToggleButton.Eye}"
@@ -70,14 +78,14 @@
                         IsChecked="{Binding Source={x:Static models:Preference.Instance}, Path=Git.IncludeUntrackedInWC, Mode=TwoWay}"
                         Checked="ToggleIncludeUntracked" Unchecked="ToggleIncludeUntracked"/>
                     <controls:IconButton
-                        Grid.Column="5"
+                        Grid.Column="6"
                         Click="StageSelected"
                         Width="14" Height="14"
                         Margin="4,0"
                         Icon="{StaticResource Icon.Down}"
                         ToolTip="{DynamicResource Text.WorkingCopy.Unstaged.Stage}"/>
                     <controls:IconButton
-                        Grid.Column="6"
+                        Grid.Column="7"
                         Click="StageAll"
                         Width="14" Height="14"
                         Margin="4,0"
