--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -4,8 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:SourceGit.Views.Widgets"
              xmlns:controls="clr-namespace:SourceGit.Views.Controls"
-             xmlns:converters="clr-namespace:SourceGit.Views.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="32" d:DesignWidth="800">
     <Grid>
@@ -48,13 +48,7 @@
                     BorderBrush="{DynamicResource Brush.Border0}"
                     ItemsSource="{Binding ElementName=me, Path=Tabs}" 
                     WindowChrome.IsHitTestVisibleInChrome="True"
-                    SelectionChanged="SelectionChanged">
-
-                    <ListBox.Resources>
-                        <converters:IntToBookmarkBrush x:Key="IntToBookmarkBrush"/>
-                        <converters:BoolToCollapsed x:Key="BoolToCollapsed"/>
-                    </ListBox.Resources>
-                    
+                    SelectionChanged="SelectionChanged">                    
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <VirtualizingStackPanel Orientation="Horizontal"/>
@@ -76,15 +70,12 @@
                                     <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                         <Border x:Name="Border" Background="Transparent" BorderBrush="Transparent" BorderThickness="1,1,1,0" CornerRadius="6,6,0,0">
                                             <Grid x:Name="Contents" Width="200" VerticalAlignment="Center" Opacity=".5" ToolTip="{Binding Tooltip}">
-                                                <Path 
-                                                    Width="8" Margin="8,0,0,0"
-                                                    HorizontalAlignment="Left"
-                                                    Fill="{Binding Bookmark, Converter={StaticResource IntToBookmarkBrush}}"
-                                                    Visibility="{Binding IsRepository, Converter={StaticResource BoolToCollapsed}}">
-                                                    <Path.Data>
-                                                        <EllipseGeometry Center="0,0" RadiusX="14" RadiusY="14"/>
-                                                    </Path.Data>
-                                                </Path>
+                                                <local:Bookmark 
+                                                    Width="14" Height="14" 
+                                                    Margin="8,0,0,0" 
+                                                    HorizontalAlignment="Left" 
+                                                    Color="{Binding Bookmark}"
+                                                    Visibility="{Binding IsRepository, Converter={StaticResource BoolToCollapsed}}"/>
 
                                                 <TextBlock Margin="32,0" HorizontalAlignment="Stretch" TextAlignment="Center" Text="{Binding Title}"/>
 
