--- a/src/Resources/Themes/Dark.xaml
+++ b/src/Resources/Themes/Dark.xaml
@@ -1,8 +1,6 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="Colors.Shadow">White</Color>
-    
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">    
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
     <SolidColorBrush x:Key="Brush.Window" Color="#FF252525"/>
@@ -20,6 +18,7 @@
     <SolidColorBrush x:Key="Brush.Border1" Color="#FF7C7C7C"/>
     <SolidColorBrush x:Key="Brush.Border2" Color="#FF404040"/>
     <SolidColorBrush x:Key="Brush.Border3" Color="#FF252525"/>
+    <SolidColorBrush x:Key="Brush.WelcomeBorder">Transparent</SolidColorBrush>
     
     <SolidColorBrush x:Key="Brush.FG1" Color="#FFF1F1F1"/>
     <SolidColorBrush x:Key="Brush.FG2" Color="#40F1F1F1"/>
