--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -1,8 +1,6 @@
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Color x:Key="Colors.Shadow">Black</Color>
-
     <SolidColorBrush x:Key="Brush.Logo" Color="#FFF05133"/>
 
     <SolidColorBrush x:Key="Brush.Window" Color="#FFF0F5F9"/>
@@ -20,6 +18,7 @@
     <SolidColorBrush x:Key="Brush.Border1" Color="#FF898989"/>
     <SolidColorBrush x:Key="Brush.Border2" Color="#FFCFCFCF"/>
     <SolidColorBrush x:Key="Brush.Border3" Color="#FFEFEFEF"/>
+    <SolidColorBrush x:Key="Brush.WelcomeBorder">#FFCFCFCF</SolidColorBrush>
     
     <SolidColorBrush x:Key="Brush.FG1" Color="#FF1F1F1F"/>
     <SolidColorBrush x:Key="Brush.FG2" Color="#FF6F6F6F"/>
