style<Window>: show progress bar in taskbar while popup is running

--- a/src/Views/Clone.xaml
+++ b/src/Views/Clone.xaml
@@ -12,6 +12,11 @@
     Title="{DynamicResource Text.Clone}" 
     Width="500" SizeToContent="Height"
     ResizeMode="NoResize">
+
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo ProgressState="None"/>
+    </Window.TaskbarItemInfo>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="28"/>
