--- a/src/Views/Widgets/Welcome.xaml
+++ b/src/Views/Widgets/Welcome.xaml
@@ -1,4 +1,5 @@
 <UserControl x:Class="SourceGit.Views.Widgets.Welcome"
+             x:Name="me"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -156,6 +157,13 @@
                 FontWeight="Bold"
                 Text="{DynamicResource Text.Welcome.DragDropTip}" 
                 Foreground="{DynamicResource Brush.FG2}"/>
-        </StackPanel>        
+        </StackPanel>
+
+        <!-- Alerts -->
+        <local:Exceptions
+            Grid.Row="1" 
+            HorizontalAlignment="Right" VerticalAlignment="Top"
+            Width="330" Height="Auto"
+            Context="{Binding ElementName=me, Path=ExceptionContext}"/>
     </Grid>
 </UserControl>
